implement api for User (add/put/get/update/delete)
